// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> Snaphot must match marketingBannerRender 1`] = `
<div
  className="banner"
  style={
    Object {
      "height": "",
      "maxWidth": "",
    }
  }
>
  <iframe
    src="https://s.adroll.com/a/Z3C/YCN/Z3CYCNAN3ZCSRDVO6HPZ22.jpg"
    title="banner"
  />
</div>
`;

exports[`<Banner /> Snaphot must match topBannerRender 1`] = `
<div
  className="banner"
  style={
    Object {
      "height": "10em",
      "maxWidth": "730px",
    }
  }
>
  <img
    alt=""
    src="https://s0.2mdn.net/8391437/1-AZR_NA-FreeAcctITProSecureWellMngd-White-A_NLD_728x90_BAN_AZR-Direct__NL_None_Standard_SBAN_TN_Illustration_Benefit.png"
  />
</div>
`;
